# llama.cpp-vulkan

./: .gitignore  Makefile.am  README.md  autogen.sh  build-llama.cpp-rocm.in  build-llama.cpp-vulkan.in  build-rocm.in  configure.ac  install-asdf.in  install-intel-oneapi-hpc.in  install-llama.cpp-rocm.in  install-llama.cpp-vulkan.in  install-ompi.in  install-rocm-binaries.in  install-ucx.in  install-vulkan-sdk.in
patches/: mtmd-requirements.diff  patch-ucx.diff  requirements.diff  server-tests-requirements.diff
